--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -11,8 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    {% load static %}
+    <link href="{% static 'css/styles.css'%}" rel="stylesheet">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4df026d6-b71b-4a07-9f55-b3ac814d51a3&lang=ru_RU" type="text/javascript">
+
     </script>
+    <link href="https://yandex.st/bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+
 
     <style>
         html, body, #map {
@@ -25,13 +31,24 @@
 
 <body>
 
+    <div class="card">
 
-    <div id="map"></div>
-    {% load static %}
-    <script src = "{% static 'js/main.js' %}" type="text/javascript">
+        <div>
+            <h3 class="description">Choose the points for your route</h3>
+        </div>
+        <div class="map_block">
+            <div id="map"></div>
+        </div>
+        {% load static %}
+        <script src = "{% static 'js/main.js' %}" type="text/javascript">
 
 
-    </script>
+        </script>
+
+        <div class="submit_block">
+            <button type="button" class="btn btn-success submit">Save the route</button>
+        <div/>
+    </div>
 </body>
 
 </html>
