--- a/map/static/css/styles.css
+++ b/map/static/css/styles.css
@@ -1,44 +1,55 @@
-.btn-plus {
-  background-color: hsl(0, 100%, 82%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fecccc", endColorstr="#fea3a3");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#fecccc), to(#fea3a3));
-  background-image: -moz-linear-gradient(top, #fecccc, #fea3a3);
-  background-image: -ms-linear-gradient(top, #fecccc, #fea3a3);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fecccc), color-stop(100%, #fea3a3));
-  background-image: -webkit-linear-gradient(top, #fecccc, #fea3a3);
-  background-image: -o-linear-gradient(top, #fecccc, #fea3a3);
-  background-image: linear-gradient(#fecccc, #fea3a3);
-  border-color: #fea3a3 #fea3a3 hsl(0, 100%, 80%);
-  color: #333 !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.13);
-  -webkit-font-smoothing: antialiased;
-  height: 20px;
-  border-radius: 15px;
-  text-align: center;
-  width: 30px;
+body {
+    background-image: url("https://images.hdqwalls.com/download/minimal-lake-sunset-img-1920x1080.jpg");
+    width: 100;
+    height: 100%;
 }
 
-.btn-minus {
-  background-color: hsl(195, 79%, 43%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#56c5eb", endColorstr="#1798c4");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#56c5eb), to(#1798c4));
-  background-image: -moz-linear-gradient(top, #56c5eb, #1798c4);
-  background-image: -ms-linear-gradient(top, #56c5eb, #1798c4);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #56c5eb), color-stop(100%, #1798c4));
-  background-image: -webkit-linear-gradient(top, #56c5eb, #1798c4);
-  background-image: -o-linear-gradient(top, #56c5eb, #1798c4);
-  background-image: linear-gradient(#56c5eb, #1798c4);
-  border-color: #1798c4 #1798c4 hsl(195, 79%, 38%);
-  color: #333 !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
-  -webkit-font-smoothing: antialiased;
-  height: 20px;
-  border-radius: 15px;
-  width: 30px;
-  text-align: center;
+#map {
+    min-height: 600px;
+    max-height: 1200px;
+}
 
+.my_card {
+    width: 80%;
+    margin: 30px auto;
+    height: 90%;
+}
+
+.btn-plus {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: rgba(3, 169, 244, 0.54);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    text-align: center;
+    background: #f7f7f7;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.08);
+}
+
+.icon-plus {
+    position: absolute;
+    content: '';
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    vertical-align: middle;
+    left: 10px;
+    top: 9px;
+    border-radius: 50%;
+    font-size: 40px;
+    background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+    background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
+    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+    border-bottom: solid 2px #b5b5b5;
+}
+
+.icon-plus:active {
+    background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+    border-bottom: solid 2px #d8d8d8;
 }
 
 .map_block {
@@ -65,12 +76,4 @@
 .submit {
     position: relative;
     right: 0px;
-}
-
-.card {
-    border-radius: 25px;
-    margin: 10px auto;
-    width: 95%;
-    height: 95%;
-    background-color: rgba(232, 232, 232, 0.5);
 }
