--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -10,45 +10,47 @@
     <meta name="author" content="SitePoint">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-    {% load static %}
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet"> {% load static %}
     <link href="{% static 'css/styles.css'%}" rel="stylesheet">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4df026d6-b71b-4a07-9f55-b3ac814d51a3&lang=ru_RU" type="text/javascript">
-
     </script>
     <link href="https://yandex.st/bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-    <style>
-        html, body, #map {
-            width: 100%; height: 100%; padding: 0; margin: 0;
-        }
-    </style>
 
 
 </head>
 
 <body>
 
-    <div class="card">
+    <div class="card text-center border-secondary mb-7 my_card">
+        <div class="card-header">
 
-        <div>
-            <h3 class="description">Choose the points for your route</h3>
         </div>
-        <div class="map_block">
-            <div id="map"></div>
+        <div class="card-body ">
+            <div class="map_block">
+                <div id="map"></div>
+            </div>
+            {% load static %}
+            <script src="{% static 'js/main.js' %}" type="text/javascript">
+            </script>
+
+
+
+
         </div>
-        {% load static %}
-        <script src = "{% static 'js/main.js' %}" type="text/javascript">
+
+        <div class="card-footer text-muted">
+            <button id="submit-button" type="button" class="btn btn-success submit">Save the route</button>
 
 
-        </script>
+        </div>
 
-        <div class="submit_block">
-            <button type="button" class="btn btn-success submit">Save the route</button>
-        <div/>
-    </div>
 </body>
 
 </html>
