--- a/map/static/css/styles.css
+++ b/map/static/css/styles.css
@@ -1,119 +1,126 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans);
-body {
-    background-image: url("space.gif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-}
-
-#map {
-    min-height: 650px;
-    max-height: 1200px;
-    border-radius: 30px;
-}
-
-.my_card {
-    border-width: 0px;
-    background-color: transparent;
-    margin: 30px auto;
-    height: 90%;
-    border: none;
-    box-shadow: none;
-}
-
-.btn-plus {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: rgba(3, 169, 244, 0.54);
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    text-align: center;
-    background: #f7f7f7;
-    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.08);
-}
-
-.icon-plus {
-    position: absolute;
-    content: '';
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    vertical-align: middle;
-    left: 10px;
-    top: 9px;
-    border-radius: 50%;
-    font-size: 40px;
-    background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
-    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-    border-bottom: solid 2px #b5b5b5;
-}
-
-.icon-plus:active {
-    background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-    border-bottom: solid 2px #d8d8d8;
-}
-
-.map_block {
-    width: 80%;
-    height: 70%;
-    margin: auto;
-    position: relative;
-    margin-top: 20px;
-}
-
-.description {
-    position: relative;
-    top: 20px;
-    text-align: center;
-}
-
-.submit_block {
-    margin-top: 50px;
-    width: 200px;
-    position: absolute;
-    right: 0px;
-}
-
-.submit {
-    width: 300px;
-    height: 60px;
-    border-radius: 50px;
-    font-family: 'Montserrat', sans-serif;
-    background-image: linear-gradient(135deg, #ABDCFF 0%, #0396FF 100%);
-    box-shadow: 0 20px 30px -6px rgba(30, 161, 255, 0.5);
-    outline: none;
-    border: none;
-    cursor: pointer;
-    font-size: 22px;
-    color: white;
-}
-
-.my_footer {
-    display: inline-block;
-}
-
-.route-button {
-    font-family: 'Montserrat', sans-serif;
-    width: 150px;
-    height: 60px;
-    border-radius: 50px;
-    background-image: linear-gradient(135deg, #ABDCFF 0%, #0396FF 100%);
-    background-position: top left;
-    background-repeat: no-repeat;
-    box-shadow: 0 20px 30px -6px rgba(30, 161, 255, 0.5);
-    outline: none;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
-    color: white;
-}
-
-.my-heading {
-    font-family: 'Montserrat', sans-serif;
-    color: #FDFEFF;
-}
+            @import url(//fonts.googleapis.com/css?family=Open+Sans);
+            html {
+                height: 100%;
+            }
+            
+            body {
+                background-image: url("space.gif");
+                background-repeat: no-repeat;
+                background-size: cover;
+                height: 100%;
+            }
+            
+            #map {
+                height: 120%;
+                border-radius: 30px;
+            }
+            
+            .card-body {
+                height: 80%;
+            }
+            
+            .my_card {
+                border-width: 0px;
+                background-color: transparent;
+                margin: 30px auto;
+                height: 90%;
+                border: none;
+                box-shadow: none;
+            }
+            
+            .btn-plus {
+                display: inline-block;
+                position: relative;
+                text-decoration: none;
+                color: rgba(3, 169, 244, 0.54);
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                text-align: center;
+                background: #f7f7f7;
+                box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.08);
+            }
+            
+            .icon-plus {
+                position: absolute;
+                content: '';
+                width: 80px;
+                height: 80px;
+                line-height: 80px;
+                vertical-align: middle;
+                left: 10px;
+                top: 9px;
+                border-radius: 50%;
+                font-size: 40px;
+                background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+                background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+                text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
+                box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+                border-bottom: solid 2px #b5b5b5;
+            }
+            
+            .icon-plus:active {
+                background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
+                box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+                border-bottom: solid 2px #d8d8d8;
+            }
+            
+            .map_block {
+                width: 80%;
+                height: 70%;
+                margin: auto;
+                position: relative;
+                margin-top: 20px;
+            }
+            
+            .description {
+                position: relative;
+                top: 20px;
+                text-align: center;
+            }
+            
+            .submit_block {
+                margin-top: 50px;
+                width: 200px;
+                position: absolute;
+                right: 0px;
+            }
+            
+            .submit {
+                width: 300px;
+                height: 60px;
+                border-radius: 50px;
+                font-family: 'Montserrat', sans-serif;
+                background-image: linear-gradient(135deg, #ABDCFF 0%, #0396FF 100%);
+                box-shadow: 0 20px 30px -6px rgba(30, 161, 255, 0.5);
+                outline: none;
+                border: none;
+                cursor: pointer;
+                font-size: 22px;
+                color: white;
+            }
+            
+            .my_footer {
+                display: inline-block;
+            }
+            
+            .route-button {
+                font-family: 'Montserrat', sans-serif;
+                width: 150px;
+                height: 60px;
+                border-radius: 50px;
+                background-image: linear-gradient(135deg, #ABDCFF 0%, #0396FF 100%);
+                background-position: top left;
+                background-repeat: no-repeat;
+                box-shadow: 0 20px 30px -6px rgba(30, 161, 255, 0.5);
+                outline: none;
+                border: none;
+                cursor: pointer;
+                font-size: 24px;
+                color: white;
+            }
+            
+            .my-heading {
+                font-family: 'Montserrat', sans-serif;
+                color: #FDFEFF;
+            }
